[package]
name = "ruml"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
description = "(ru)st macros for ht(ml) expansion => ruml"
documentation = "https://docs.rs/ruml"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
